<resources>
    <string name="app_name">Cat</string>
    <string name="cat_description">Description</string>
    <string name="cat_favorite_status">Cat favorite status</string>
    <string name="favorites">Favorites</string>
    <string name="title_favorite">Cat Favorite</string>
    <string name="link">Link:</string>
    <string name="no_data_available">No data available</string>
    <string name="go_back">Go back</string>
    <string name="search_the_image_id">Search the image ID</string>
    <string name="failed_to_display_the_data">Failed to display the data</string>
    <string name="original_file_name">Original file name</string>
    <string name="created_at">Created at:</string>
</resources>